--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,9 @@
 		<!-- <link rel="icon" href="/OrigamiWand/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> -->
-		<link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+		<script src="https://unpkg.com/feather-icons"></script>
+		
+		<!-- <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 		
 		%sveltekit.head%
 	</head>
